Enhance animations by adding AOS attributes to service and portfolio sections

--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
 
     <!-- ---------- Services ---------- -->
 
-    <div id="services" data-aos="zoom-in">
+    <div id="services">
         <div class="container">
-            <h1 class="subtitle">
+            <h1 class="subtitle" data-aos="fade-right">
                 My Services
             </h1>
             <div class="services-list">
-                <div>
+                <div data-aos="fade-right" data-aos-delay="100">
                     <i class="fa-solid fa-code"></i>
                     <h2>Code</h2>
                     <p>Build your dream app from scratch! Whether it's a personal project, startup idea, or enterprise
@@ -98,14 +98,14 @@
                         and best coding practices to ensure high performance and scalability.</p>
                     <!-- <a href="#">learn more</a> -->
                 </div>
-                <div>
+                <div data-aos="fade-right" data-aos-delay="300">
                     <i class="fa-solid fa-bug-slash"></i>
                     <h2>Debug</h2>
                     <p>Is your Flutter app crashing, running slow, or showing weird errors? I specialize in debugging
                         and performance optimization to make your app smooth, efficient, and bug-free.</p>
                     <!-- <a href="#">learn more</a> -->
                 </div>
-                <div>
+                <div data-aos="fade-right" data-aos-delay="500">
                     <i class="fa-brands fa-google-play"></i>
                     <i class="fa-brands fa-app-store-ios"></i>
                     <h2>Deployment</h2>
@@ -119,13 +119,13 @@
 
     <!-- ---------- Portfolio ---------- -->
 
-    <div id="portfolio" data-aos="zoom-in">
+    <div id="portfolio">
         <div class="container">
-            <div class="sub-title">
+            <div class="sub-title" data-aos="fade-right">
                 My Work
             </div>
             <div class="work-list">
-                <div class="work">
+                <div class="work" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="400">
                     <img src="assets/chatingApp.jpeg">
                     <div class="layer">
                         <h3>Messaging App</h3>
@@ -136,7 +136,7 @@
                                 class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
-                <div class="work">
+                <div class="work" data-aos="zoom-in" data-aos-delay="300" data-aos-duration="400">
                     <img src="assets/ecom.jpeg">
                     <div class="layer">
                         <h3>E-commerce App</h3>
@@ -147,7 +147,7 @@
                                 class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
-                <div class="work">
+                <div class="work" data-aos="zoom-in" data-aos-delay="500" data-aos-duration="400">
                     <img src="assets/serviceMarket.png">
                     <div class="layer">
                         <h3>Service Market App</h3>
@@ -159,7 +159,7 @@
                     </div>
                 </div>
             </div>
-            <a href="https://github.com/Al-Fuad?tab=repositories" class="btn">See More</a>
+            <a href="https://github.com/Al-Fuad?tab=repositories" class="btn" data-aos="zoom-in" data-aos-delay="500" data-aos-duration="1000">See More</a>
         </div>
     </div>
 
