Change AOS animation setting to allow repeated animations

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     <script>
         AOS.init({
             duration: 1000, // Animation duration in milliseconds
-            once: true, // Ensures animations only happen once
+            once: false, // Ensures animations only happen once
         });
     </script>
 </body>
