--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <a href="https://drive.google.com/file/d/1xlbcUBxGDs67qg3fP6pZA4EbcIAU3erb/view?usp=sharing"
                         download class="btn btn2"><i class="fa-solid fa-download"></i>  Download Resume</a>
                 </div>
-                <div class="contact-right" data-aos="fade-left">
+                <div class="contact-right" data-aos="fade-right" data-aos-delay="300">
                     <form name="submit-to-google-sheet">
                         <input type="text" name="Name" placeholder="Your Name" required>
                         <input type="email" name="Email" placeholder="Your Email" required>
