Update AOS animation for about section to use 'fade-right' with delay

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="about-col-1" data-aos="fade-right">
                     <img src="assets/me2.jpg" alt="">
                 </div>
-                <div class="about-col-2" data-aos="fade-left">
+                <div class="about-col-2" data-aos="fade-right" data-aos-delay="300">
                     <h1 class="sub-title">About</h1>
                     <p>I am a motivated programmer and software engineer with a strong foundation in building scalable
                         and efficient software solutions. Proficient in
