--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <i class="fa-solid fa-bars" onclick="openMenu()"></i>
             </nav>
             <div class="header-text" data-aos="fade-right">
-                <h2>Flutter Developer</h2>
+                <h2>Software Engineer</h2>
                     <h3>Hi, I'm <span>Nur</span><br>from Dhaka, Bangladesh.
                 </h2>
             </div>
@@ -58,7 +58,7 @@
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
                             <li><span>Languages</span><br>C, Java, Dart, Python</li>
-                            <li><span>Frameworks</span><br>Flutter, Spring Boot</li>
+                            <li><span>Frameworks</span><br>Flutter, Django</li>
                             <li><span>Architectures</span><br>Clean Architecture, MVC Architecture</li>
                             <li><span>State Managements(Flutter)</span><br>BLoC, GetX, Riverpod</li>
                         </ul>
